--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -14,9 +14,27 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
     >
 
-    <link rel="preload" href="{{dir}}/public/css/material-icons-outlined.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="{{dir}}/public/css/titillium-web-v19-latin_latin-ext-regular.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="{{dir}}/public/css/titillium-web-v19-latin_latin-ext-italic.woff2" as="font" type="font/woff2" crossorigin>
+    <link
+      rel="preload"
+      href="{{dir}}/public/css/material-icons-outlined.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    >
+    <link
+      rel="preload"
+      href="{{dir}}/public/css/titillium-web-v19-latin_latin-ext-regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    >
+    <link
+      rel="preload"
+      href="{{dir}}/public/css/titillium-web-v19-latin_latin-ext-italic.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    >
 
     <script
       src="https://cdn.jsdelivr.net/npm/ol@v10.6.1/dist/ol.js"
