--- a/public/css/layout/_layerview.css
+++ b/public/css/layout/_layerview.css
@@ -55,19 +55,19 @@
   }
 }
 
-#layers > .drawer.layer-group .drawer.layer-view {
+.drawer.layer-group .drawer.layer-view {
   background: var(--color-base-tertiary);
   border: none;
   box-shadow: none;
   border-top: 1px solid var(--color-border);
 }
 
-#layers > .layer-view > .drawer,
-#layers .drawer.layer-view .drawer {
+.layer-view > .drawer,
+.drawer.layer-view .drawer {
   border: none;
   box-shadow: none;
 }
 
-#layers > .layer-view > .drawer {
+.layer-view > .drawer {
   background: var(--color-base-tertiary);
 }
