--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1429,18 +1429,18 @@ label.radio {
     padding-left: 4px;
   }
 }
-#layers > .drawer.layer-group .drawer.layer-view {
+.drawer.layer-group .drawer.layer-view {
   background: var(--color-base-tertiary);
   border: none;
   box-shadow: none;
   border-top: 1px solid var(--color-border);
 }
-#layers > .layer-view > .drawer,
-#layers .drawer.layer-view .drawer {
+.layer-view > .drawer,
+.drawer.layer-view .drawer {
   border: none;
   box-shadow: none;
 }
-#layers > .layer-view > .drawer {
+.layer-view > .drawer {
   background: var(--color-base-tertiary);
 }
 
