--- a/public/css/layout/_layerview.css
+++ b/public/css/layout/_layerview.css
@@ -55,19 +55,9 @@
   }
 }
 
-.drawer.layer-group .drawer.layer-view {
+.drawer.layer-group > .drawer.layer-view {
   background: var(--color-base-tertiary);
   border: none;
   box-shadow: none;
   border-top: 1px solid var(--color-border);
-}
-
-.layer-view > .drawer,
-.drawer.layer-view .drawer {
-  border: none;
-  box-shadow: none;
-}
-
-.layer-view > .drawer {
-  background: var(--color-base-tertiary);
 }
