--- a/public/css/layout/_layerview.css
+++ b/public/css/layout/_layerview.css
@@ -26,6 +26,23 @@
   }
 }
 
+.drawer.layer-group {
+  padding-left: 3px;
+  padding-right: 3px;
+  background: var(--color-base-tertiary);
+
+  & > * {
+    padding-left: 4px;
+  }
+
+  & > .drawer.layer-view {
+    background: var(--color-base-tertiary);
+    border: none;
+    box-shadow: none;
+    border-top: 1px solid var(--color-border);
+  }
+}
+
 .drawer.layer-view {
   padding-left: 5px;
   padding-right: 5px;
@@ -43,21 +60,4 @@
       font-weight: normal;
     }
   }
-}
-
-.drawer.layer-group {
-  padding-left: 3px;
-  padding-right: 3px;
-  background: var(--color-base-tertiary);
-
-  & > * {
-    padding-left: 4px;
-  }
-}
-
-.drawer.layer-group > .drawer.layer-view {
-  background: var(--color-base-tertiary);
-  border: none;
-  box-shadow: none;
-  border-top: 1px solid var(--color-border);
 }
