--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1406,6 +1406,20 @@ label.radio {
     padding-bottom: 5px;
   }
 }
+.drawer.layer-group {
+  padding-left: 3px;
+  padding-right: 3px;
+  background: var(--color-base-tertiary);
+  & > * {
+    padding-left: 4px;
+  }
+  & > .drawer.layer-view {
+    background: var(--color-base-tertiary);
+    border: none;
+    box-shadow: none;
+    border-top: 1px solid var(--color-border);
+  }
+}
 .drawer.layer-view {
   padding-left: 5px;
   padding-right: 5px;
@@ -1420,20 +1434,6 @@ label.radio {
       font-weight: normal;
     }
   }
-}
-.drawer.layer-group {
-  padding-left: 3px;
-  padding-right: 3px;
-  background: var(--color-base-tertiary);
-  & > * {
-    padding-left: 4px;
-  }
-}
-.drawer.layer-group > .drawer.layer-view {
-  background: var(--color-base-tertiary);
-  border: none;
-  box-shadow: none;
-  border-top: 1px solid var(--color-border);
 }
 
 /* public/css/layout/_locationview.css */
