--- a/public/css/base/_button.css
+++ b/public/css/base/_button.css
@@ -56,7 +56,8 @@ button {
     padding: 0.3em;
 
     &.active {
-      border-bottom: 1px solid var(--color-active);
+      background-color: var(--color-active); 
+      color: var(--color-font-contrast);
     }
   }
 
