--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -158,7 +158,8 @@ button {
     border-bottom: 1px solid var(--color-border);
     padding: 0.3em;
     &.active {
-      border-bottom: 1px solid var(--color-active);
+      background-color: var(--color-active);
+      color: var(--color-font-contrast);
     }
   }
   &.underline {
@@ -585,6 +586,9 @@ label.checkbox {
     > div {
       flex-grow: 1;
       font-size: 2em;
+      &.active {
+        border-bottom: 1px solid var(--color-active);
+      }
     }
   }
   > .panels {
