--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -158,8 +158,10 @@ button {
     border-bottom: 1px solid var(--color-border);
     padding: 0.3em;
     &.active {
-      background-color: var(--color-active);
-      color: var(--color-font-contrast);
+      background-color: rgb(from var(--color-active) r g b / 0.7);
+      color: var(--color-font);
+      font-weight: bold;
+      border: solid 1px var(--color-border);
     }
   }
   &.underline {
