--- a/public/css/base/_button.css
+++ b/public/css/base/_button.css
@@ -56,7 +56,10 @@ button {
     padding: 0.3em;
 
     &.active {
-      border-bottom: 1px solid var(--color-active);
+      background-color: rgb(from var(--color-active) r g b / 0.7);
+      color: var(--color-font);
+      font-weight: bold;
+      border-radius: 3px;
     }
   }
 
