--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -158,7 +158,10 @@ button {
     border-bottom: 1px solid var(--color-border);
     padding: 0.3em;
     &.active {
-      border-bottom: 1px solid var(--color-active);
+      background-color: rgb(from var(--color-active) r g b / 0.7);
+      color: var(--color-font);
+      font-weight: bold;
+      border-radius: 3px;
     }
   }
   &.underline {
@@ -585,6 +588,9 @@ label.checkbox {
     > div {
       flex-grow: 1;
       font-size: 2em;
+      &.active {
+        border-bottom: 1px solid var(--color-active);
+      }
     }
   }
   > .panels {
