--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -162,6 +162,9 @@ button {
       color: var(--color-font);
       font-weight: bold;
       border-radius: 3px;
+      * {
+        color: inherit;
+      }
     }
   }
   &.underline {
@@ -180,6 +183,9 @@ button {
   }
   &.active {
     color: var(--color-active);
+    * {
+      color: inherit;
+    }
   }
 }
 
