--- a/public/css/base/_common.css
+++ b/public/css/base/_common.css
@@ -88,6 +88,14 @@
   }
 }
 
+.mask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-base);
+  opacity: 0.9;
+}
+
 @media only screen and (max-width: 768px) {
   .mobile-hidden {
     visibility: hidden;
