--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -96,6 +96,13 @@
     color: var(--color-font);
   }
 }
+.mask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-base);
+  opacity: 0.9;
+}
 @media only screen and (max-width: 768px) {
   .mobile-hidden {
     visibility: hidden;
