Drawer css review - initial phase;

--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -28,6 +28,8 @@
 
 @import url('./elements/_key.css');
 
+@import url('./elements/_layer.css');
+
 @import url('./elements/_loading.css');
 
 @import url('./elements/_login_form.css');
