--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -4,6 +4,7 @@
   --color-base: #f2f2f2;
   --color-base-secondary: #f7f7f7;
   --color-base-tertiary: #fafafa;
+  --color-base-layout: #f0eee9;
   --color-border: #dddddd;
   --color-font: #3f3f3f;
   --color-font-mid: #858585;
@@ -13,6 +14,9 @@
   --color-changed: #ffffa7;
   --color-info: #0b6f50;
   --color-danger: #a21309;
+  --layer-group-box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  --layer-box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+  --container-border-radius: 3px;
 }
 * {
   transition: 0.2s ease-in-out;
