--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -4,6 +4,7 @@
   --color-base: #f2f2f2;
   --color-base-secondary: #f7f7f7;
   --color-base-tertiary: #fafafa;
+  --color-base-layout: #f0eee9;
   --color-border: #dddddd;
   --color-font: #3f3f3f;
   --color-font-mid: #858585;
@@ -13,6 +14,9 @@
   --color-changed: #ffffa7;
   --color-info: #0b6f50;
   --color-danger: #a21309;
+  --layer-group-box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  --layer-box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;
+  --container-border-radius: 3px;
 }
 * {
   transition: 0.2s ease-in-out;
@@ -734,6 +738,9 @@ dialog {
   padding: 2px;
   background-color: var(--color-base-secondary);
   color: var(--color-font);
+  margin-top: 2px;
+  border-radius: var(--container-border-radius);
+  border: 1px solid var(--color-border);
   &.expandable:not(.empty) > .header:hover {
     cursor: pointer;
   }
@@ -748,10 +755,17 @@ dialog {
   &.expandable:not(.expanded) > *:not(.header) {
     display: none !important;
   }
-  &.expanded > .header > .material-symbols-outlined.caret::after {
-    content: "keyboard_arrow_up";
-    color: var(--color-font-mid);
-    line-height: 1.5em;
+  &.expanded {
+    padding-bottom: 5px;
+    & > .header {
+      border-bottom: solid 1px var(--color-border);
+      margin-bottom: 7px;
+      & > .material-symbols-outlined.caret::after {
+        content: "keyboard_arrow_up";
+        color: var(--color-font-mid);
+        line-height: 1.5em;
+      }
+    }
   }
   &.disabled {
     opacity: 0.4;
@@ -784,23 +798,6 @@ dialog {
       text-overflow: ellipsis;
       flex-grow: 1;
     }
-  }
-  &.flat {
-    border-radius: 2px;
-    border: 1px solid var(--color-border);
-  }
-  &.raised {
-    border-radius: 2px;
-    box-shadow: 1px 1px 3px var(--color-border);
-    border: 1px solid var(--color-border);
-  }
-  &.raised.empty {
-    box-shadow: none;
-    border: none;
-  }
-  &.expandable.expanded {
-    box-shadow: none;
-    border: none;
   }
   p {
     padding-left: 0.3em;
@@ -836,6 +833,73 @@ dialog {
     &.active {
       color: var(--color-font-contrast);
     }
+  }
+}
+
+/* public/css/elements/_layer.css */
+.disabled > .layer {
+  opacity: 0.4;
+  pointer-events: none;
+}
+.layer {
+  padding: 2px;
+  border: solid 1px var(--color-border);
+  color: var(--color-font);
+  &.expandable:not(.empty) > .header {
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  &.expandable.empty > .header > .caret {
+    display: none;
+  }
+  &.expandable > .header > .material-symbols-outlined.caret::after {
+    content: "keyboard_arrow_down";
+    color: var(--color-font-mid);
+    line-height: 1.5em;
+  }
+  &.expandable:not(.expanded) > *:not(.header) {
+    display: none !important;
+  }
+  &.expanded > .header > .material-symbols-outlined.caret::after {
+    content: "keyboard_arrow_up";
+    color: var(--color-font-mid);
+    line-height: 1.5em;
+  }
+  &.disabled {
+    opacity: 0.4;
+    pointer-events: none;
+  }
+  & > .header {
+    display: flex;
+    align-items: center;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    .material-symbols-outlined {
+      font-size: 1.5em;
+    }
+    & > :not(button):not(label):not(input) {
+      pointer-events: none;
+    }
+    & > div,
+    & > button {
+      margin-left: 5px;
+      width: 1.5em;
+      height: 1.5em;
+    }
+    & > :first-child {
+      overflow: hidden;
+      white-space: normal;
+      text-overflow: ellipsis;
+      flex-grow: 1;
+    }
+  }
+  p {
+    padding-left: 0.3em;
+    padding-right: 0.3em;
   }
 }
 
@@ -1394,18 +1458,10 @@ label.radio {
 }
 
 /* public/css/layout/_layerview.css */
-.drawer.layer-group,
-.drawer.layer-view {
-  margin-top: 7px;
-  border-radius: 3px;
-  & > .header {
-    & ~ .drawer.layer-view {
-      margin-top: 0;
-    }
-    & ~ .drawer.layer-view ~ .drawer.layer-view {
-      margin-top: 7px;
-    }
-  }
+.layer-group,
+.layer-view {
+  margin-top: 5px;
+  border-radius: var(--container-border-radius);
   & > .meta {
     padding-bottom: 5px;
     -webkit-touch-callout: none;
@@ -1416,25 +1472,28 @@ label.radio {
   }
   &.expanded {
     padding-bottom: 5px;
+    & > .header {
+      border-bottom: solid 1px var(--color-border);
+    }
   }
 }
-.drawer.layer-group {
-  padding-left: 3px;
-  padding-right: 3px;
-  background: var(--color-base-tertiary);
-  & > * {
-    padding-left: 4px;
-  }
-  & > .drawer.layer-view {
-    background: var(--color-base-tertiary);
-    border: none;
-    box-shadow: none;
-    border-top: 1px solid var(--color-border);
+.layer-group {
+  padding-left: 4px;
+  padding-right: 4px;
+  background: var(--color-base-secondary);
+  box-shadow: var(--layer-group-box-shadow);
+  color: var(--color-font-primary);
+  border: none;
+  > .header {
+    h2 {
+      color: var(--color-primary);
+    }
   }
 }
-.drawer.layer-view {
-  padding-left: 5px;
-  padding-right: 5px;
+.layer-view {
+  padding-left: 4px;
+  padding-right: 4px;
+  background: var(--color-base-layout);
   & > *:not(.header) {
     margin-top: 5px;
   }
