--- a/public/css/elements/_drawer.css
+++ b/public/css/elements/_drawer.css
@@ -5,28 +5,30 @@
 
 .drawer {
   padding: 2px;
-  background-color: var(--color-base-secondary);
-  color: var(--color-font);
   margin-top: 2px;
   border-radius: var(--container-border-radius);
   border: 1px solid var(--color-border);
+  background-color: var(--color-base-secondary);
+  color: var(--color-font);
 
-  &.expandable:not(.empty) > .header:hover {
-    cursor: pointer;
-  }
+  &.expandable {
+    &:not(.empty) > .header:hover {
+      cursor: pointer;
+    }
 
-  &.expandable.empty > .header > .caret {
-    display: none;
-  }
+    &.empty > .header > .caret {
+      display: none;
+    }
 
-  &.expandable > .header > .material-symbols-outlined.caret::after {
-    content: 'keyboard_arrow_down';
-    color: var(--color-font-mid);
-    line-height: 1.5em;
-  }
+    & > .header > .material-symbols-outlined.caret::after {
+      content: 'keyboard_arrow_down';
+      color: var(--color-font-mid);
+      line-height: 1.5em;
+    }
 
-  &.expandable:not(.expanded) > *:not(.header) {
-    display: none !important;
+    &:not(.expanded) > *:not(.header) {
+      display: none !important;
+    }
   }
 
   &.expanded {
@@ -53,11 +55,6 @@
     display: flex;
     align-items: center;
     color: var(--color-font);
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
 
     .material-symbols-outlined {
       font-size: 1.5em;
