--- a/public/css/elements/_dropdown.css
+++ b/public/css/elements/_dropdown.css
@@ -4,7 +4,7 @@
   background-color: var(--color-base-secondary);
   border: 1px solid var(--color-border);
   padding: 5px;
-  border-radius: 3px;
+  border-radius: var(--container-border-radius);
 
   option.selected {
     background-color: var(--color-primary);
