--- a/public/css/elements/_layer.css
+++ b/public/css/elements/_layer.css
@@ -4,34 +4,45 @@
 }
 
 .layer {
-  padding: 2px;
+  margin-top: 5px;
+  padding: 2px 4px;
+  border-radius: var(--container-border-radius);
   border: solid 1px var(--color-border);
   color: var(--color-font);
 
-  &.expandable:not(.empty) > .header {
-    &:hover {
-      cursor: pointer;
+  &.expandable {
+    &:not(.empty) > .header {
+      &:hover {
+        cursor: pointer;
+      }
+    }
+    &.empty > .header > .caret {
+      display: none;
+    }
+
+    & > .header > .material-symbols-outlined.caret::after {
+      content: 'keyboard_arrow_down';
+      color: var(--color-font-mid);
+      line-height: 1.5em;
+    }
+
+    &:not(.expanded) > *:not(.header) {
+      display: none !important;
     }
   }
 
-  &.expandable.empty > .header > .caret {
-    display: none;
-  }
+  &.expanded {
+    padding-bottom: 5px;
 
-  &.expandable > .header > .material-symbols-outlined.caret::after {
-    content: 'keyboard_arrow_down';
-    color: var(--color-font-mid);
-    line-height: 1.5em;
-  }
+    & > .header {
+      border-bottom: solid 1px var(--color-border); /* readability */
 
-  &.expandable:not(.expanded) > *:not(.header) {
-    display: none !important;
-  }
-
-  &.expanded > .header > .material-symbols-outlined.caret::after {
-    content: 'keyboard_arrow_up';
-    color: var(--color-font-mid);
-    line-height: 1.5em;
+      & > .material-symbols-outlined.caret::after {
+        content: 'keyboard_arrow_up';
+        color: var(--color-font-mid);
+        line-height: 1.5em;
+      }
+    }
   }
 
   &.disabled {
@@ -42,14 +53,17 @@
   & > .header {
     display: flex;
     align-items: center;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+
+    h2 {
+      font-weight: normal;
+    }
 
     .material-symbols-outlined {
       font-size: 1.5em;
+    }
+
+    .meta {
+      padding: 5px 0;
     }
 
     & > :not(button):not(label):not(input) {
@@ -69,10 +83,5 @@
       text-overflow: ellipsis;
       flex-grow: 1;
     }
-  }
-
-  p {
-    padding-left: 0.3em;
-    padding-right: 0.3em;
   }
 }
