--- a/public/css/elements/_slider.css
+++ b/public/css/elements/_slider.css
@@ -13,7 +13,7 @@
     input {
       min-width: 4em;
       border: 1px solid var(--color-border);
-      border-radius: 3px;
+      border-radius: var(--container-border-radius);
     }
   }
 
