--- a/public/views/_user.html
+++ b/public/views/_user.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head data-user="{{user}}" data-dir="{{dir}}">
+  <head data-dir="{{dir}}">
     <title>XYZ | User Administration</title>
     <link
       rel="icon"
@@ -146,11 +146,6 @@
 
   <script>
   window.onload = async () => {
-
-    if (!document.head.dataset.user) {
-      window.location.href = '?login=true'
-      return;
-    }
 
     // Get list of available roles from workspace.
     const rolesList = await xhrPromise(`${document.head.dataset.dir}/api/workspace/roles`)
