--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1039,6 +1039,9 @@ label.radio {
       background-color: var(--color-primary);
     }
   }
+  & > ul:hover {
+    display: block;
+  }
 }
 @media print {
   .searchbox {
