--- a/public/css/layout/_legend.css
+++ b/public/css/layout/_legend.css
@@ -14,8 +14,11 @@
       display: contents;
     }
 
-    &.label {
+    .label {
       grid-column: 2;
+      text-overflow: ellipsis;
+      text-wrap: nowrap;
+      overflow: hidden;
     }
 
     &.flex {
